--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,95 @@
 html {
   box-sizing: border-box;
+  font-family: Roboto, "Roboto Condensed", sans-serif;
+  line-height: 1.5;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+}
+
+.img-flex {
+  display: block;
+  width: 100%;
+}
+
+.banner-text {
+  max-width: 65%;
+  padding: 0 0 0 4rem;
+  flex-direction: column;
+  margin: 0 0 1em;
+}
+
+.banner-content {
+  display: flex;
+  padding-top: 2%;
+  position: absolute;
+  left: 50%;
+  justify-content: flex-start;
+  width: 100%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 700px;
+}
+
+.banner {
+  align-items: center;
+  position: relative;
+  max-height: 500px;
+  overflow: hidden;
+}
+
+.icon {
+  width: 100%;
+  max-width: 31%;
+}
+
+.icon img {
+  margin: 0 1em;
+  display: block;
+  width: 100%;
+}
+
+a {
+  color: #fff;
+  font-weight: 200;
+  padding: .4em .75em .3em;
+  text-decoration: none;
+  font-size: 1.125rem;
+  border-width: 3px;
+  display: inline-block;
+  border-radius: 8px;
+}
+
+h2 {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 3rem;
+  font-weight: bold;
+  margin: 0;
+  line-height: 1.2;
+}
+
+p {
+  font-size: 1.5rem;
+  margin: .3em 0 .6em;
+}
+
+.btn {
+  color: #fff;
+  background-color: #333;
+}
+
+.btn-big {
+  font-size: 1.5rem;
+  text-align: center;
+  padding: .5em 1em;
+  display: inline-block;
+}
+
+.btn:hover {
+  background-color: #000;
 }
